 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/07/01:
   * Added keycommands :AddWorkspace and :RemoveLastWorkspace (Mark)
     WorkspaceCmd.cc/hh FbCommandFactory.cc
   * More fixes for _NET_WM_STATE_MODAL and _NET_WM_STATE_DEMANDS_ATTENTION,
     plus a minor fix for pixmap styles (Mark)
     Ewmh.cc Window.cc AttentionNoticeHandler.cc/hh WinClient.cc
     WinButtonTheme.cc
*07/06/30:
   * Fixed implementation of _NET_WM_STATE_MODAL (Mark)
     Ewmh.cc/hh WinClient.cc/hh Window.cc
   * Fixed the groups file, even though it's deprecated (Mark)
     Workspace.cc Screen.cc
   * Fix _NET_WM_STATE_DEMANDS_ATTENTION with tabbed windows, #1732392 (Mark)
     Ewmh.cc/hh
*07/06/29:
   * Updates for compiling with gcc 4.3 (thanks Dmitry E. Oboukhov)
*07/06/28:
   * Strip off additional bits in event state set by Xorg, bug #1736252 (Mark)
     FbTk/KeyUtil.hh
   * Added some missing Open Office entries and window managers, plus some other
     minor changes in fluxbox-generate_menu
     fluxbox-generate_menu.in
*07/06/16:
   * Fixed compile error with --disable-remember (Mark)
     Window.cc/hh Remember.cc/hh
*07/06/09:
   * Minor change to the /bin/sh - solution (Mathias)
     we are using now just $SHELL -c <line_here>
     src/FbCommands.cc util/fbrun/FbRun.cc
*07/06/08:
   * Fix transient windows getting tabbed from apps file and not changing layers
     when main window is in a lowered tab (Mark)
     WinClient.cc Window.cc Remember.cc
*07/06/06:
   * Fix to avoid rogue instances of /bin/sh after forking away programs (Mathias)
     util/fbrun/FbRun.cc src/FbCommands.cc
*07/06/04:
   * Fix fluxbox.1.in, and asciidoc, menu command is "wallpapers" not
     "wallpaper". asciidoc manpages are stale.
   * Fix submenu placement with xinerama after moving the menu between heads,
     bug #1479517 (Mark)
     FbMenu.cc/hh FbTk/Menu.hh
*07/06/03:
   * Deiconify when automatically tabbing to a minimized window with focus new
     windows on, bug #1716899 (Mark)